--- a/src/ExampleLibraryInstaller.Provider/ExampleLibraryInstaller.Provider.csproj
+++ b/src/ExampleLibraryInstaller.Provider/ExampleLibraryInstaller.Provider.csproj
@@ -5,7 +5,7 @@
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <PackageTags>library, package, client-side, build</PackageTags>
-        <Version>1.0.0</Version>
+        <Version>1.0.0-pre</Version>
         <Authors>Author Name</Authors>
         <Company>Author Name</Company>
         <Description>MSBuild target for the Visual Studio Library Installer</Description>
