--- a/src/ExampleLibraryInstaller.Provider/ExampleLibraryInstaller.Provider.csproj
+++ b/src/ExampleLibraryInstaller.Provider/ExampleLibraryInstaller.Provider.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Web.LibraryInstaller.Contracts" Version="1.0.0-alpha" PrivateAssets="All" />
+      <PackageReference Include="Microsoft.Web.LibraryInstaller.Contracts" Version="1.0.0-alpha" />
     </ItemGroup>
 
     <Target Name="PackTaskDependencies" BeforeTargets="GenerateNuspec">
